force-app/main/default/objects/Event_Allotment__c/Event_Allotment__c.object-meta.xml
<CustomObject>
    <label>Event Allotment</label>
    <nameField>
        <displayFormat>EVAT-{000000}</displayFormat>
        <label>Event Allotment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Allotments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>