force-app/main/default/objects/Event_Allotment__c/fields/AAT_Review__c.field-meta.xml
<CustomField>
    <fullName>AAT_Review__c</fullName>
    <formula>Text(Event__r.AAT_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAT Review</label>
    <type>Text</type>
</CustomField>