force-app/main/default/objects/Event_Allotment__c/fields/Activated__c.field-meta.xml
<CustomField>
    <fullName>Activated__c</fullName>
    <formula>Text(Event__r.Activated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activated</label>
    <type>Text</type>
</CustomField>