force-app/main/default/objects/Event_Allotment__c/fields/Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Date__c</fullName>
    <formula>Event__r.Activated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>