force-app/main/default/objects/Event_Allotment__c/fields/Allotment__c.field-meta.xml
<CustomField>
    <fullName>Allotment__c</fullName>
    <label>Allotment</label>
    <referenceTo>Allotment__c</referenceTo>
    <relationshipLabel>Event Summary</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>