force-app/main/default/objects/Event_Allotment__c/fields/Decision_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Due_Date__c</fullName>
    <formula>Event__r.Decision_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Due Date</label>
    <type>Date</type>
</CustomField>