force-app/main/default/objects/Event_Allotment__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <formula>TEXT(Event__r.Event_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Type</label>
    <type>Text</type>
</CustomField>