force-app/main/default/objects/Event_Allotment__c/fields/Notice_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Resolve__c</fullName>
    <formula>TEXT(Event__r.Notice_to_Resolve__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notice to Resolve</label>
    <type>Text</type>
</CustomField>