force-app/main/default/objects/Event_Allotment__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <formula>Text(Event__r.Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review</label>
    <type>Text</type>
</CustomField>