force-app/main/default/objects/Event_Allotment__c/fields/RFI__c.field-meta.xml
<CustomField>
    <fullName>RFI__c</fullName>
    <formula>TEXT(Event__r.RFI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI</label>
    <type>Text</type>
</CustomField>