force-app/main/default/objects/Event_Allotment__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <formula>Event__r.Status_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>