force-app/main/default/objects/Event_Allotment__c/validationRules/Perm_E_A_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_E_A_Access</fullName>
    <active>true</active>
    <description>NATSIFAC and STO record access</description>
    <errorConditionFormula>AND(
OR(ISCHANGED( Allotment__c),
ISCHANGED( Event__c),
NOT(ISNEW()
)),
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.System_Administrator
)))</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>